Fix spacing on status bar

--- a/15-Dungeon-Crawler/src/components/Main.sass
+++ b/15-Dungeon-Crawler/src/components/Main.sass
@@ -29,6 +29,8 @@ main
   justify-content: space-around
   align-items: flex-start
   align-content: flex-start
+  h2, p
+    margin: 0
   h2
     align-self: center
 
